==> ManagementCenterInnsbruck/iNav_TC233/0_Src/0_AppSw/Tricore/Main/inav/src/main/drivers/serial_uart.c <==
#include <stdbool.h>
#include <stdint.h>
#include "platform.h"
#include "build/build_config.h"
#include "common/utils.h"
#include "drivers/uart_inverter.h"
#include "drivers/io_impl.h"
#include "serial.h"
#include "serial_uart.h"
#include "serial_uart_impl.h"

static void usartConfigurePinInversion(uartPort_t *uartPort) {
#if !defined(USE_UART_INVERTER) && !defined(STM32F303xC)
    UNUSED(uartPort);
#else
    bool inverted = uartPort->port.options & SERIAL_INVERTED;

#ifdef USE_UART_INVERTER
    uartInverterLine_e invertedLines = UART_INVERTER_LINE_NONE;
    if (uartPort->port.mode & MODE_RX) {
        invertedLines |= UART_INVERTER_LINE_RX;
    }
    if (uartPort->port.mode & MODE_TX) {
        invertedLines |= UART_INVERTER_LINE_TX;
    }
    uartInverterSet(uartPort->USARTx, invertedLines, inverted);
#endif

#ifdef STM32F303xC
    uint32_t inversionPins = 0;

    if (uartPort->port.mode & MODE_TX) {
        inversionPins |= USART_InvPin_Tx;
    }
    if (uartPort->port.mode & MODE_RX) {
        inversionPins |= USART_InvPin_Rx;
    }

    USART_InvPinCmd(uartPort->USARTx, inversionPins, inverted ? ENABLE : DISABLE);
#endif
#endif
}

static void uartReconfigure(uartPort_t *uartPort)
{

#ifdef AURIX

	//create module config
	IfxAsclin_Asc_Config ascConfig;
	IfxAsclin_Asc_initModuleConfig(&ascConfig, uartPort->USARTx);

    //set the desired baudrate
    ascConfig.baudrate.prescaler    = 1;
    ascConfig.baudrate.baudrate     = uartPort->port.baudRate;
    //Adjust sample point to suit HW (default values do not work)
    ascConfig.baudrate.oversampling = uartPort->oversampling;
    ascConfig.bitTiming.medianFilter = uartPort->medianFilter;
    ascConfig.bitTiming.samplePointPosition = uartPort->samplePointPosition;

    // ISR priorities and interrupt target
    ascConfig.interrupt.rxPriority = uartPort->rxPriority;
    ascConfig.interrupt.txPriority = uartPort->txPriority;
    ascConfig.interrupt.typeOfService = IfxCpu_Irq_getTos(IfxCpu_getCoreIndex());

    // FIFO configuration
    ascConfig.txBuffer = (void*)uartPort->port.txBuffer;
    ascConfig.txBufferSize = uartPort->port.txBufferSize;
    ascConfig.rxBuffer = (void*)uartPort->port.rxBuffer;
    ascConfig.rxBufferSize = uartPort->port.rxBufferSize;

    ascConfig.frame.parityBit = (uartPort->port.options & SERIAL_PARITY_EVEN) ? 1 : 0;
    ascConfig.frame.parityType = (uartPort->port.options & SERIAL_PARITY_EVEN) ? IfxAsclin_ParityType_even : IfxAsclin_ParityType_odd;
    ascConfig.frame.stopBit = (uartPort->port.options & SERIAL_STOPBITS_2) ? IfxAsclin_StopBit_2 : IfxAsclin_StopBit_1;

    IfxAsclin_Asc_Pins pins = {0};
    GPIO_TypeDef* port = IO_GPIO(uartPort->rxIO);
    uint8_t pinIndex = IO_Pin(uartPort->rxIO);

    int i,j;
    for (i=0; i<IFXASCLIN_PINMAP_NUM_MODULES; i++)
    	for (j=0; j<IFXASCLIN_PINMAP_RX_IN_NUM_ITEMS; j++)
    		if (IfxAsclin_Rx_In_pinTable[i][j] != NULL_PTR)
    			if (IfxAsclin_Rx_In_pinTable[i][j]->pin.port == port && IfxAsclin_Rx_In_pinTable[i][j]->pin.pinIndex == pinIndex)
    				pins.rx = IfxAsclin_Rx_In_pinTable[i][j];

    port = IO_GPIO(uartPort->txIO);
    pinIndex = IO_Pin(uartPort->txIO);

    for (i=0; i<IFXASCLIN_PINMAP_NUM_MODULES; i++)
    	for (j=0; j<IFXASCLIN_PINMAP_TX_OUT_NUM_ITEMS; j++)
    		if (IfxAsclin_Tx_Out_pinTable[i][j] != NULL_PTR)
    			if (IfxAsclin_Tx_Out_pinTable[i][j]->pin.port == port && IfxAsclin_Tx_Out_pinTable[i][j]->pin.pinIndex == pinIndex)
    				pins.tx = IfxAsclin_Tx_Out_pinTable[i][j];

    pins.rxMode = IfxPort_InputMode_pullUp;
    pins.txMode = IfxPort_OutputMode_pushPull;
    ascConfig.pins = &pins;

    IfxAsclin_Asc_initModule(&uartPort->asclin, &ascConfig);

    usartConfigurePinInversion(uartPort);

#else

    USART_InitTypeDef USART_InitStructure;
    USART_Cmd(uartPort->USARTx, DISABLE);

    USART_InitStructure.USART_BaudRate = uartPort->port.baudRate;

    // according to the stm32 documentation wordlen has to be 9 for parity bits
    // this does not seem to matter for rx but will give bad data on tx!
    if (uartPort->port.options & SERIAL_PARITY_EVEN) {
        USART_InitStructure.USART_WordLength = USART_WordLength_9b;
    } else {
        USART_InitStructure.USART_WordLength = USART_WordLength_8b;
    }

    USART_InitStructure.USART_StopBits = (uartPort->port.options & SERIAL_STOPBITS_2) ? USART_StopBits_2 : USART_StopBits_1;
    USART_InitStructure.USART_Parity   = (uartPort->port.options & SERIAL_PARITY_EVEN) ? USART_Parity_Even : USART_Parity_No;

    USART_InitStructure.USART_HardwareFlowControl = USART_HardwareFlowControl_None;
    USART_InitStructure.USART_Mode = 0;
    if (uartPort->port.mode & MODE_RX)
        USART_InitStructure.USART_Mode |= USART_Mode_Rx;
    if (uartPort->port.mode & MODE_TX)
        USART_InitStructure.USART_Mode |= USART_Mode_Tx;

    USART_Init(uartPort->USARTx, &USART_InitStructure);

    usartConfigurePinInversion(uartPort);

    if (uartPort->port.options & SERIAL_BIDIR)
        USART_HalfDuplexCmd(uartPort->USARTx, ENABLE);
    else
        USART_HalfDuplexCmd(uartPort->USARTx, DISABLE);

    USART_Cmd(uartPort->USARTx, ENABLE);

#endif

}

void uartStartTxDMA(uartPort_t *s)
{
#ifdef STM32F4
    DMA_Cmd(s->txDMAStream, DISABLE);
    DMA_MemoryTargetConfig(s->txDMAStream, (uint32_t)&s->port.txBuffer[s->port.txBufferTail], DMA_Memory_0);
    //s->txDMAStream->M0AR = (uint32_t)&s->port.txBuffer[s->port.txBufferTail];
    if (s->port.txBufferHead > s->port.txBufferTail) {
        s->txDMAStream->NDTR = s->port.txBufferHead - s->port.txBufferTail;
        s->port.txBufferTail = s->port.txBufferHead;
    }
    else {
        s->txDMAStream->NDTR = s->port.txBufferSize - s->port.txBufferTail;
        s->port.txBufferTail = 0;
    }
    s->txDMAEmpty = false;
    DMA_Cmd(s->txDMAStream, ENABLE);
#else
    s->txDMAChannel->CMAR = (uint32_t)&s->port.txBuffer[s->port.txBufferTail];
    if (s->port.txBufferHead > s->port.txBufferTail) {
        s->txDMAChannel->CNDTR = s->port.txBufferHead - s->port.txBufferTail;
        s->port.txBufferTail = s->port.txBufferHead;
    } else {
        s->txDMAChannel->CNDTR = s->port.txBufferSize - s->port.txBufferTail;
        s->port.txBufferTail = 0;
    }
    s->txDMAEmpty = false;
    DMA_Cmd(s->txDMAChannel, ENABLE);
#endif
}

uint32_t uartTotalRxBytesWaiting(const serialPort_t *instance)
{
    const uartPort_t *s = (const uartPort_t*)instance;

#ifndef AURIX

#ifdef STM32F4
    if (s->rxDMAStream) {
        uint32_t rxDMAHead = s->rxDMAStream->NDTR;
#else
    if (s->rxDMAChannel) {
        uint32_t rxDMAHead = s->rxDMAChannel->CNDTR;
#endif
        if (rxDMAHead >= s->rxDMAPos) {
            return rxDMAHead - s->rxDMAPos;
        } else {
            return s->port.rxBufferSize + rxDMAHead - s->rxDMAPos;
        }
    }

    if (s->port.rxBufferHead >= s->port.rxBufferTail) {
        return s->port.rxBufferHead - s->port.rxBufferTail;
    } else {
        return s->port.rxBufferSize + s->port.rxBufferHead - s->port.rxBufferTail;
    }

#else

    return IfxAsclin_Asc_getReadCount((IfxAsclin_Asc*)&s->asclin);

#endif
}

uint32_t uartTotalTxBytesFree(const serialPort_t *instance)
{
    const uartPort_t *s = (const uartPort_t*)instance;

#ifdef AURIX

    return IfxAsclin_Asc_getWriteCount((IfxAsclin_Asc*)&s->asclin) - 1;

#else

    uint32_t bytesUsed;

    if (s->port.txBufferHead >= s->port.txBufferTail) {
        bytesUsed = s->port.txBufferHead - s->port.txBufferTail;
    } else {
        bytesUsed = s->port.txBufferSize + s->port.txBufferHead - s->port.txBufferTail;
    }

#ifdef STM32F4
    if (s->txDMAStream) {
        /*
         * When we queue up a DMA request, we advance the Tx buffer tail before the transfer finishes, so we must add
         * the remaining size of that in-progress transfer here instead:
         */
        bytesUsed += s->txDMAStream->NDTR;
#else
    if (s->txDMAChannel) {
        /*
         * When we queue up a DMA request, we advance the Tx buffer tail before the transfer finishes, so we must add
         * the remaining size of that in-progress transfer here instead:
         */
        bytesUsed += s->txDMAChannel->CNDTR;
#endif
        /*
         * If the Tx buffer is being written to very quickly, we might have advanced the head into the buffer
         * space occupied by the current DMA transfer. In that case the "bytesUsed" total will actually end up larger
         * than the total Tx buffer size, because we'll end up transmitting the same buffer region twice. (So we'll be
         * transmitting a garbage mixture of old and new bytes).
         *
         * Be kind to callers and pretend like our buffer can only ever be 100% full.
         */
        if (bytesUsed >= s->port.txBufferSize - 1) {
            return 0;
        }
    }

    return (s->port.txBufferSize - 1) - bytesUsed;

#endif

}

bool isUartTransmitBufferEmpty(const serialPort_t *instance)
{
    const uartPort_t *s = (const uartPort_t *)instance;

#ifdef AURIX

    return Ifx_Fifo_isEmpty(s->asclin.tx);

#else

#ifdef STM32F4
    if (s->txDMAStream)
#else
    if (s->txDMAChannel)
#endif
        return s->txDMAEmpty;
    else
        return s->port.txBufferTail == s->port.txBufferHead;

#endif

}

uint8_t uartRead(serialPort_t *instance)
{
    uint8_t ch;
    uartPort_t *s = (uartPort_t *)instance;

#ifdef AURIX

    ch = IfxAsclin_Asc_blockingRead(&s->asclin);

#else

#ifdef STM32F4
    if (s->rxDMAStream) {
#else
    if (s->rxDMAChannel) {
#endif
        ch = s->port.rxBuffer[s->port.rxBufferSize - s->rxDMAPos];
        if (--s->rxDMAPos == 0)
            s->rxDMAPos = s->port.rxBufferSize;
    } else {
        ch = s->port.rxBuffer[s->port.rxBufferTail];
        if (s->port.rxBufferTail + 1 >= s->port.rxBufferSize) {
            s->port.rxBufferTail = 0;
        } else {
            s->port.rxBufferTail++;
        }
    }

#endif

    return ch;
}

void uartWrite(serialPort_t *instance, uint8_t ch)
{
    uartPort_t *s = (uartPort_t *)instance;

#ifdef AURIX

    IfxAsclin_Asc_blockingWrite(&s->asclin, ch);

#else

    s->port.txBuffer[s->port.txBufferHead] = ch;
    if (s->port.txBufferHead + 1 >= s->port.txBufferSize) {
        s->port.txBufferHead = 0;
    } else {
        s->port.txBufferHead++;
    }

#ifdef STM32F4
    if (s->txDMAStream) {
        if (!(s->txDMAStream->CR & 1))
#else
    if (s->txDMAChannel) {
        if (!(s->txDMAChannel->CCR & 1))
#endif
            uartStartTxDMA(s);
    } else {
        USART_ITConfig(s->USARTx, USART_IT_TXE, ENABLE);
    }

#endif

}

const struct serialPortVTable uartVTable[] = {
    {
        .serialWrite = uartWrite,
        .serialTotalRxWaiting = uartTotalRxBytesWaiting,
        .serialTotalTxFree = uartTotalTxBytesFree,
        .serialRead = uartRead,
        .serialSetBaudRate = uartSetBaudRate,
        .isSerialTransmitBufferEmpty = isUartTransmitBufferEmpty,
        .setMode = uartSetMode,
        .isConnected = NULL,
        .writeBuf = NULL,
        .beginWrite = NULL,
        .endWrite = NULL,
    }
};
